fixed colour circles too big

--- a/app/assets/stylesheets/partials/_colors.css.scss
+++ b/app/assets/stylesheets/partials/_colors.css.scss
@@ -1,9 +1,6 @@
-.hello{
-  padding: 10px;
-}
 .color {
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   box-shadow: 0 0 3px rgba(0, 0, 0, .2);
   border: 1px solid #ccc;
